--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,16 @@
     <string name="login">登  录</string>
     <string name="forgetPaw">忘记密码？</string>
     <string name="register">注册新用户</string>
-    <string name="hintname">用户名</string>
+    <string name="hintname">手机号</string>
     <string name="hintPwd">密码</string>
+    <string name="register_btn">注  册</string>
+    <string name="sure_pwd">确认密码</string>
+    <string name="code">验证码</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_home">首页</string>
+    <string name="tv_search">发现</string>
+    <string name="tv_follow">关注</string>
+    <string name="tv_my">我的</string>
 </resources>
