--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="tv_my">我的</string>
     <string name="exit_follow">取消关注</string>
     <string name="follow">关注</string>
+    <string name="nick">昵称</string>
 </resources>
