--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="exit_follow">取消关注</string>
     <string name="follow">关注</string>
     <string name="nick">昵称</string>
+    <string name="zhanghu">账户</string>
 </resources>
